--- a/index.html
+++ b/index.html
@@ -77,6 +77,18 @@
   </center>
   <br>
 
+  <center>
+    <table class="resource-links">
+      <tr>
+        <td>
+          <a href="https://arxiv.org/abs/2202.00046">  
+            <img src="images/arxiv.jpg" class="img_links img-responsive">
+            <div class="author">Full Paper</div>
+          </a>
+        </td> 
+    </table>
+  </center>
+  <br>     
   <!-- links to paper 
   <center>
     <table class="resource-links">
