--- a/index.html
+++ b/index.html
@@ -86,31 +86,22 @@
             <div class="author">Full Paper</div>
           </a>
         </td> 
+        <td>
+          <a href="citation.txt"> 
+            <img src="images/bib.png" class="img_links img-responsive">
+            <div class="author">BibTeX Citation</div>
+        </td>
     </table>
   </center>
   <br>     
   <!-- links to paper 
   <center>
     <table class="resource-links">
-      <tr>
-        <td>
-          <a href="">  <!--- TODO add arvix paper link 
-            <img src="images/arxiv.jpg" class="img_links img-responsive">
-            <div class="author">Full Paper</div>
-          </a>
-        </td> ---> 
-		<!--
         <td>
           <a href="">
             <img src="images/gihub.png" class="img_links img-responsive">
             <div class="author">Source Code</div>
-        </td> --> 
-<!---
-        <td>
-          <a href="citation.txt"> 
-            <img src="images/bib.png" class="img_links img-responsive">
-            <div class="author">BibTeX Citation</div>
-        </td>
+        </td> 
     </table>
   </center>
   <br> ---> 
@@ -196,12 +187,17 @@
   	</div>  
 	
 
-  <!--
+
 	<div class="container section">
 		<div class="section_title">Citation</div>
 		<pre>
-	@InProceedings{}</pre>                                
-	  </div> -->
+      @article{bounareli2022finding,
+        title={Finding Directions in GAN's Latent Space for Neural Face Reenactment},
+        author={Bounareli, Stella and Argyriou, Vasileios and Tzimiropoulos, Georgios},
+        journal={arXiv preprint arXiv:2202.00046},
+        year={2022}
+      }</pre>                                
+	  </div>
 
 <!-- </div> -->
 
