Add source code link

--- a/index.html
+++ b/index.html
@@ -75,8 +75,10 @@
       </div>
     </div>
   </center>
+  <center><h3>BMVC 2022</h3></center>
+  
   <br>
-
+  <!-- links to paper  ---> 
   <center>
     <table class="resource-links">
       <tr>
@@ -91,21 +93,16 @@
             <img src="images/bib.png" class="img_links img-responsive">
             <div class="author">BibTeX Citation</div>
         </td>
-    </table>
-  </center>
-  <br>     
-  <!-- links to paper 
-  <center>
-    <table class="resource-links">
         <td>
-          <a href="">
+          <a href="https://github.com/StelaBou/stylegan_directions_face_reenactment">
             <img src="images/gihub.png" class="img_links img-responsive">
             <div class="author">Source Code</div>
         </td> 
     </table>
+    
   </center>
-  <br> ---> 
-
+  <br>     
+  
   <!-- Teaser image --> 
   <center>
     <table class="image-grid" style="width:100%">
