--- a/index.html
+++ b/index.html
@@ -80,29 +80,60 @@
   <br>
   <!-- links to paper  ---> 
   <center>
-    <table class="resource-links">
-      <tr>
-        <td>
+  <table class="resource-links">
+    
+    <tr>
+      <td width="150px" align="center">
+        <center>
+          <span style="font-size:22px">
           <a href="https://arxiv.org/abs/2202.00046">  
             <img src="images/arxiv.jpg" class="img_links img-responsive">
             <div class="author">Full Paper</div>
           </a>
-        </td> 
-        <td>
-          <a href="citation.txt"> 
-            <img src="images/bib.png" class="img_links img-responsive">
-            <div class="author">BibTeX Citation</div>
-        </td>
-        <td>
-          <a href="https://github.com/StelaBou/stylegan_directions_face_reenactment">
-            <img src="images/gihub.png" class="img_links img-responsive">
-            <div class="author">Source Code</div>
-        </td> 
-    </table>
+        </span>
+        </center>  
+      </td> 
+
+      <td width="150px" align="center">
+        <center>
+          <span style="font-size:22px">
+            <a href="./images/poster.pdf">  
+              <img src="images/thumbnail_poster.png" class="img_links img-responsive">
+              <div class="author">Poster</div>
+            </a>
+        </span>
+        </center>  
+      </td> 
+
+      <td width="150px" align="center">
+        <center>
+          <span style="font-size:22px">
+            <a href="citation.txt"> 
+              <img src="images/bib.png" class="img_links img-responsive">
+              <div class="author">BibTeX Citation</div>
+            </a>
+        </span>
+        </center>  
+      </td> 
+
+      <td width="150px" align="center">
+        <center>
+          <span style="font-size:22px">
+            <a href="https://github.com/StelaBou/stylegan_directions_face_reenactment">
+              <img src="images/github.png" class="img_links img-responsive">
+              <div class="author">Source Code</div>
+            </a>
+        </span>
+        </center>  
+      </td> 
+
     
-  </center>
-  <br>     
+  </tr>
+  </table>
+</center>  
+  <br>    
   
+ 
   <!-- Teaser image --> 
   <center>
     <table class="image-grid" style="width:100%">
