--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
       @article{bounareli2022finding,
         title={Finding Directions in GAN's Latent Space for Neural Face Reenactment},
         author={Bounareli, Stella and Argyriou, Vasileios and Tzimiropoulos, Georgios},
-        journal={arXiv preprint arXiv:2202.00046},
+        journal={British Machine Vision Conference (BMVC)},
         year={2022}
       }</pre>                                
 	  </div>
